--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "yarn compile && yarn tsc",
     "clean": "hardhat clean",
     "coverage": "hardhat coverage",
+    "docgen": "hardhat dodoc",
     "deploy": "hardhat deploy",
     "run:node": "hardhat node",
     "test": "hardhat test",
@@ -34,6 +35,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-solhint": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@primitivefi/hardhat-dodoc": "^0.2.3",
     "@openzeppelin/contracts": "^4.8.3",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
