--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: yarn install
+      - run: yarn
+      - run: yarn compile
       - run: yarn test
