--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,5 @@ jobs:
       - uses: actions/checkout@v3
       - run: yarn
       - run: yarn compile
+      - run: sleep 20
       - run: yarn test
